--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -1,10 +1,53 @@
-.detailed-weather{
-  &__list{
+.detailed-weather {
+  margin: 20px 0;;
+  &__city-name {
+    padding-top: 10px;
+    color: #01579b;
+    font-size: 2rem;
+    text-align: center;
+  }
+  &__list {
+    width: 100%;
     display: flex;
-    &-item{
-      border: 1px solid red;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    &-item {
+      width: 20%;
+      margin: 30px 20px 0 0;
+      border-radius: 5px;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+      0 1px 10px 0 rgba(0, 0, 0, 0.12),
+      0 2px 4px -1px rgba(0, 0, 0, 0.3);
+      padding: 5px;
+      background-color: #ffca28;
+      color: #01579b;
+      .time {
+        font-size: 1.5rem;
+        text-align: center;
+        padding-top: 10px;
+      }
+      .list-item-weather-data {
+        display: flex;
+        align-items: center;
+        padding-top: 7%;
+        padding-left: 4%;
+      }
     }
   }
-
+  .btn {
+    text-decoration: none;
+    color: #fff;
+    background-color: #26a69a;
+    letter-spacing: .5px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    display: block;
+    height: 36px;
+    padding: 0 16px;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin: 50px auto;
+  }
 
 }
