--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -1,6 +1,7 @@
+
 .detailed-weather {
   margin: 20px auto;
-  width: 80%;
+  width: 60%;
   &__city-name {
     padding-top: 10px;
     color: #01579b;
@@ -10,50 +11,76 @@
   &__list {
     width: 100%;
     &-item {
-      margin: 30px 20px 0 0;
+      margin: 30px 0;
       border-radius: 5px;
       box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
       0 1px 10px 0 rgba(0, 0, 0, 0.12),
       0 2px 4px -1px rgba(0, 0, 0, 0.3);
-      //padding: 5px;
       background-color: #ffca28;
       color: #01579b;
+      .list-item__date {
+        background-color: #e0e0e0;
+        width: 100%;
+        height: 25px;
+        border-radius: 5px 5px 0 0;
+      }
+      .list-item__weather-forecast {
+        &__by-hours {
+          width: 100%;
+          display: flex;
+          justify-content: space-around;
+        }
+        &__detailed-list {
+          display: flex;
+          justify-content: space-around;
+        }
+        &__detailed-list.hide{
+          display: none;
+        }
+        .detailed-item__weather-data{
+          display: flex;
+        }
 
+
+      }
     }
-  }
-  .btn {
-    text-decoration: none;
-    color: #fff;
-    background-color: #26a69a;
-    letter-spacing: .5px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    display: block;
-    height: 36px;
-    padding: 0 16px;
-    text-transform: uppercase;
-    font-size: 14px;
-    margin: 50px auto;
-  }
-  .hide{
-    display: none;
-  }
 
-
+  }
 }
-.list-item{
-  &__date{
-    background-color: #e0e0e0;
-    width: 100%;
-    height: 25px;
-    border-radius: 5px 5px 0 0;
 
-  }
-  &__weather-forecast{
-    display: flex;
-    justify-content: space-around;
+.detailed-item__weather-data__weather-icon{
+  width: 15px;
+  height: 15px;
+}
+.btn {
+  text-decoration: none;
+  color: #fff;
+  background-color: #26a69a;
+  letter-spacing: .5px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  display: block;
+  height: 36px;
+  padding: 0 16px;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin: 50px auto;
+}
+
+
+
+.list-item {
+  &__weather-forecast {
+    //display: flex;
+    //justify-content: space-around;
     text-align: center;
     margin-top: 10px;
   }
+}
+
+.detailed-forecast-show-btn {
+  display: block;
+  background-color: #01579b;
+  color: #fafafa;
 }
