--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=cyrillic-ext');
 @import 'styles/reset';
 @import 'styles/variables';
+
 @import 'styles/base';
+@import 'styles/media';
