--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
 $font-stack: 'Helvetica';
 $default-elements-border: 1px solid rgba(0,0,0,.0975);
 $app-content-max-width: 960px;
+$indigo: #3f51b5;
