--- a/src/components/defaultCities/FavoriteCitiesItem.scss
+++ b/src/components/defaultCities/FavoriteCitiesItem.scss
@@ -20,6 +20,7 @@
       font-size: 1.5rem;
       text-align: center;
       padding-top: 10px;
+      font-weight: bold;
     }
     &__weather-condition {
       flex: 1 0 60%;
@@ -38,7 +39,7 @@
   }
   &__details {
     background-color: #3f51b5;
-    margin: 30px 20px 0 0;
+    margin: 10px 20px 0 0;
     border-radius: 5px;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12),
@@ -53,12 +54,14 @@
       &__text-block {
         margin-left: 10%;
         .text-block__name{
-          color: #bdbdbd;
+          color: #ffffff;
           font-size: 0.9rem;
           margin-bottom: 5px;
         }
         .text-block__value{
           font-size: 1.2rem;
+          color: #ffffff;
+
           font-weight: bold;
         }
       }
