--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -1,4 +1,4 @@
-
+@import "../../styles/variables";
 .detailed-weather {
   margin: 20px auto;
   width: 60%;
@@ -59,19 +59,20 @@
   height: 15px;
 }
 .btn {
-  text-decoration: none;
-  color: #fff;
-  background-color: #26a69a;
-  letter-spacing: .5px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  display: block;
-  height: 36px;
-  padding: 0 16px;
-  text-transform: uppercase;
-  font-size: 14px;
-  margin: 50px auto;
+  //text-decoration: none;
+  //color: #fff;
+  //background-color: #26a69a;
+  //letter-spacing: .5px;
+  //cursor: pointer;
+  //border: none;
+  //border-radius: 5px;
+  //display: block;
+  //height: 36px;
+  //padding: 0 16px;
+  //text-transform: uppercase;
+  //font-size: 14px;
+  //margin: 50px auto;
+  @extend %btns;
 }
 
 
