--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -1,4 +1,9 @@
 @import "../../styles/variables";
+
+.hide {
+  display: none;
+}
+
 .detailed-weather {
   margin: 20px auto;
   width: 60%;
@@ -10,84 +15,115 @@
   }
   &__list {
     width: 100%;
+    margin-top: 50px;
     &-item {
-      margin: 30px 0;
-      border-radius: 5px;
-      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-      0 1px 10px 0 rgba(0, 0, 0, 0.12),
-      0 2px 4px -1px rgba(0, 0, 0, 0.3);
-      background-color: #ffca28;
-      color: #01579b;
-      .list-item__date {
-        background-color: #e0e0e0;
-        width: 100%;
-        height: 25px;
-        border-radius: 5px 5px 0 0;
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 30px;
+      &__date {
+        width: 120px;
+        height: 120px;
+        color: #ffffff;
+        background-color: $indigo;
+        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+        0 1px 10px 0 rgba(0, 0, 0, 0.12),
+        0 2px 4px -1px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        text-align: center;
+        padding: 0 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        line-height: 1.2rem;
       }
-      .list-item__weather-forecast {
+      &__weather-forecast {
+        width: 85%;
         &__by-hours {
+          padding: 9px 10px;
           width: 100%;
           display: flex;
           justify-content: space-around;
+          border-radius: 5px;
+          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+          0 1px 10px 0 rgba(0, 0, 0, 0.12),
+          0 2px 4px -1px rgba(0, 0, 0, 0.3);
+          background-color: #fafafa;
+          color: $indigo;
+          cursor: pointer;
         }
-        &__detailed-list {
+        &__detailed-weather {
           display: flex;
           justify-content: space-around;
+          margin-top: 15px;
+          background-color: $indigo;
+          color: #ffffff;
+          border-radius: 5px;
+          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+          0 1px 10px 0 rgba(0, 0, 0, 0.12),
+          0 2px 4px -1px rgba(0, 0, 0, 0.3);
+          padding: 9px 10px;
+          width: 100%;
+
+          &__detailed__item {
+            flex: 0 0 12.5%;
+
+          }
+          .detailed-item__weather-data {
+            display: flex;
+          }
+          &__weather-data {
+            flex: 0 0 12.5%;
+          }
         }
-        &__detailed-list.hide{
+        &__detailed-weather.hide {
           display: none;
         }
-        &__detailed__item{
-          border-right: 1px solid aqua;
-        }
-        .detailed-item__weather-data{
-          display: flex;
-        }
-        &__weather-data{
-          border-right: 1px solid red;
-        }
-
-
       }
     }
-
+  }
+  .list-item__weather-forecast {
+    &__weather-data {
+      text-align: center;
+      width: 12%;
+    }
+    &__time {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+    &__current-temp {
+      font-weight: bold;
+    }
+    &__detailed__item {
+      padding: 0 10px;
+      border-right: 1px solid rgba(0, 0, 0, 0.12);
+      width: 12%;
+      &:last-child {
+        border: none;
+      }
+      .detailed-item__weather-data {
+        margin: 10px 0;
+        &__weather-icon {
+          width: 30px;
+          height: 30px;
+          align-self: center;
+        }
+        &__text-block {
+          margin-left: 10px;
+          &__name {
+            font-size: 0.9rem;
+          }
+          &__value {
+            margin-top: 5px;
+            font-weight: bold;
+          }
+        }
+      }
+    }
   }
 }
 
-.detailed-item__weather-data__weather-icon{
-  width: 15px;
-  height: 15px;
-}
 .btn {
-  //text-decoration: none;
-  //color: #fff;
-  //background-color: #26a69a;
-  //letter-spacing: .5px;
-  //cursor: pointer;
-  //border: none;
-  //border-radius: 5px;
-  //display: block;
-  //height: 36px;
-  //padding: 0 16px;
-  //text-transform: uppercase;
-  //font-size: 14px;
-  //margin: 50px auto;
   @extend %btns;
-}
-
-
-
-.list-item {
-  &__weather-forecast {
-    //display: flex;
-    //justify-content: space-around;
-    text-align: center;
-    margin-top: 10px;
-  }
-}
-
-.detailed-forecast-show-btn {
+  margin: 0 auto;
   display: block;
-  background-color: #01579b;
-  color: #fafafa;
 }
