--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $indigo: #3f51b5;
   padding: 0 16px;
   text-transform: uppercase;
   &:hover {
-    background-color: #2bbbad;
+    background-color: #5c6bc0;
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14),
     0 1px 7px 0 rgba(0, 0, 0, 0.12),
     0 3px 1px -1px rgba(0, 0, 0, 0.2);
