--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -6,7 +6,7 @@
 
 .detailed-weather {
   margin: 20px auto;
-  width: 60%;
+  width: 80%;
   &__city-name {
     padding-top: 10px;
     color: #01579b;
@@ -21,8 +21,10 @@
       justify-content: space-around;
       margin-bottom: 30px;
       &__date {
-        width: 120px;
-        height: 120px;
+        width: 140px;
+        min-height: 100%;
+
+        //flex: 0 0 18%;
         color: #ffffff;
         background-color: $indigo;
         box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
@@ -38,8 +40,9 @@
       }
       &__weather-forecast {
         width: 85%;
+        //flex: 0 0 80%;
         &__by-hours {
-          padding: 9px 10px;
+          padding: 10px 10px;
           width: 100%;
           display: flex;
           justify-content: space-around;
@@ -103,16 +106,18 @@
       .detailed-item__weather-data {
         margin: 10px 0;
         &__weather-icon {
-          width: 30px;
-          height: 30px;
+          width: 25px;
+          height: 25px;
           align-self: center;
         }
         &__text-block {
           margin-left: 10px;
           &__name {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
           }
           &__value {
+            font-size: 0.7rem;
+
             margin-top: 5px;
             font-weight: bold;
           }
