--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,3 +1,11 @@
+@media screen and (min-width: 1201px){
+
+}
+@media screen and (max-width: 1200px){
+  .detailed-weather__list-item__weather-forecast__detailed-weather{
+    background-color: red;
+  }
+}
 @media screen and (max-width: 960px){
   .settings.show{
     width: 100%;
@@ -5,7 +13,32 @@
   .search-form-wrapper {
     width: 100%;
   }
-
+  .detailed-weather__list-item__weather-forecast__detailed-weather{
+    display: none;
+  }
+  .detailed-weather{
+    &__list-item{
+      display: block;
+      &__date{
+        width: 100%;
+      }
+      &__weather-forecast{
+        width: 100%;
+        &__by-hours{
+          display: block;
+          .list-item__weather-forecast__weather-data{
+            width: 100%;
+            margin-bottom: 10px;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+            padding: 20px;
+          }
+        }
+      }
+    }
+    .btn{
+      width: 100%;
+    }
+  }
 }
 @media screen and (max-width: 640px){
 
