--- a/src/components/defaultCities/FavoriteCitiesItem.scss
+++ b/src/components/defaultCities/FavoriteCitiesItem.scss
@@ -15,6 +15,7 @@
       align-items: center;
       padding-top: 7%;
       padding-left: 4%;
+      margin-top: 20px;
     }
     &__city-name {
       font-size: 1.5rem;
