--- a/src/components/notFound/NotFound.scss
+++ b/src/components/notFound/NotFound.scss
@@ -1,7 +1,17 @@
+@import "../../styles/variables";
 .page-not-found {
+  width: 60%;
   margin: 70px auto;
-  font-weight: bold;
-  font-size: 5rem;
-  text-align: center;
-  color: #26a69a;
+
+  &_txt{
+    font-weight: bold;
+    font-size: 5rem;
+    text-align: center;
+    color: $indigo;
+  }
+  .btn{
+    width: 20%;
+    margin-top: 50px;
+  }
+
 }
