--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,23 @@
+.github-link {
+  margin-top: 50px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+  position: absolute;
+  right: 0;
+  //display: flex;
+  //flex-direction: column;
+  a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+  }
+  span{
+    text-align: center;
+  }
+    &__img{
+    width: 40px;
+    height: 40px;
+      margin-bottom: 5px;
+  }
+}
