--- a/src/components/favoriteCities/FavoriteCitiesItem.scss
+++ b/src/components/favoriteCities/FavoriteCitiesItem.scss
@@ -10,6 +10,10 @@
     padding: 5px;
     background-color: #fafafa;
     color: $indigo;
+    position: relative;
+    &__info-wrapper{
+      margin-top: 20px;
+    }
     &__weather-data {
       display: flex;
       align-items: center;
@@ -35,6 +39,13 @@
       font-size: 1.5rem;
       font-weight: bold;
       flex: 0 0 25%;
+    }
+    &__delete-item{
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      top: 10px;
+      right: 10px;
     }
 
   }
