--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -1,25 +1,30 @@
 @import "../../styles/variables";
 .settings {
-  width: 2%;
+  width: 18%;
+
   height: 100vh;
-  transition: .1s ease-in-out;
-  position: absolute;
+  transition: .3s ease-in-out;
+  position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
+  transform: translateX(-100%);
   &__app-name {
     display: inline-block;
     margin-left: 25px;
     font-size: 1.4rem;
     vertical-align: bottom;
+    margin-top: 20px;
   }
   &__wrapper {
     display: flex;
     margin-top: 20px;
     flex-direction: column;
     &__control-btn {
-      margin-left: 10px;
+      margin: 20px 40px;
       &__item {
         @extend %btns;
+        width: 100%;
       }
     }
   }
@@ -49,6 +54,11 @@
     height: 20px;
     margin-left: 20px;
     margin-top: 20px;
+    position: absolute;
+    top: 0;
+    right: -25px;
+    transition: .3s ease-in-out;
+
     &:hover {
       transform: scale(1.1);
     }
@@ -56,8 +66,13 @@
 }
 
 .settings.show {
-  left: 0;
-  width: 18%;
+
+  transform: translateX(0%);
+
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
   background-color: white;
+ }
+.settings__menu-btn.show {
+  right: 10px;
+
 }
