--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -51,10 +51,48 @@
 
 @media screen and (max-width: 960px) {
 
-  .settings.show {
+  .current-city{
+    width: 100%;
+    &_wrapper{
+      display: block;
+    }
+    .city-list-item__main__current-temp {
+      font-size: 1.6rem;
+    }
+  }
+  .city-list-item__main__current-temp {
+    font-size: 1.3rem;
+  }
+  .city-list-item__main__weather-condition {
+    flex: 1 0 55%;
+  }
+  .search-form__form__control-panel__submit-btn {
+    width: auto;
+  }
+  .settings{
     width: 100%;
   }
+  .city-list {
+    flex-direction: column;
+    align-items: center;
+
+    &-item{
+      width: 90%;
+      &__main{
+        margin: 15px 0;
+      }
+      &__details{
+        display: none;
+
+      }
+    }
+
+  }
+  .github-link{
+    position: static;
+  }
   .search-form-wrapper {
+
     width: 100%;
   }
   .detailed-weather__list-item__weather-forecast__detailed-weather {
@@ -90,19 +128,54 @@
     }
   }
 }
+/*
 
 @media screen and (max-width: 640px) {
+  .settings{
+    width: auto;
+  }
+  .current-city{
+    width: 100%;
+    .city-list-item__main__current-temp {
+      font-size: 1.6rem;
+    }
+  }
+  .city-list {
+    flex-direction: column;
+    align-items: center;
 
+    &-item{
+      width: 90%;
+      &__main{
+        margin: 15px 0;
+      }
+      &__details{
+        margin: 10px 0;
+
+      }
+    }
+
+  }
+  .github-link{
+    position: static;
+  }
 }
 
 @media screen and (max-width: 390px) {
-  .city-list-item__main__current-temp {
-    font-size: 1.3rem;
-  }
-  .city-list-item__main__weather-condition {
-    flex: 1 0 55%;
-  }
-  .search-form__form__control-panel__submit-btn {
-    width: auto;
-  }
+
+}*/
+@media screen and (max-width: 575px) {
+
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+
+}
+@media screen and (min-width: 769px) and (max-width: 992px) {
+
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+
+}
+@media screen and (min-width: 1201px) {
+
 }
