--- a/src/components/detailedWeather/DetailedWeather.scss
+++ b/src/components/detailedWeather/DetailedWeather.scss
@@ -86,7 +86,11 @@
   .list-item__weather-forecast {
     &__weather-data {
       text-align: center;
+      align-items: center;
       width: 12%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     &__time {
       font-weight: bold;
