--- a/src/components/favoriteCities/FavoriteCitiesItem.scss
+++ b/src/components/favoriteCities/FavoriteCitiesItem.scss
@@ -1,89 +1,95 @@
 @import '../../styles/variables';
 
-.city-list-item {
-  &__main {
-    margin: 30px 20px 0 0;
-    border-radius: 5px;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12),
-    0 2px 4px -1px rgba(0, 0, 0, 0.3);
-    padding: 5px;
-    background-color: #fafafa;
-    color: $indigo;
-    position: relative;
-    &__info-wrapper{
-      margin-top: 20px;
-    }
-    &__weather-data {
-      display: flex;
-      align-items: center;
-      padding-top: 7%;
-      padding-left: 4%;
-      margin-top: 20px;
-    }
-    &__city-name {
-      font-size: 1.5rem;
-      text-align: center;
-      padding-top: 10px;
-      font-weight: bold;
-    }
-    &__weather-condition {
-      flex: 1 0 60%;
-      &__description {
-        font-size: 1rem;
+.city-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  &-item {
+    flex: 0 0 30%;
+
+    &__main {
+      margin: 30px 20px 0 0;
+      border-radius: 5px;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+      0 1px 10px 0 rgba(0, 0, 0, 0.12),
+      0 2px 4px -1px rgba(0, 0, 0, 0.3);
+      padding: 5px;
+      background-color: #fafafa;
+      color: $indigo;
+      position: relative;
+      &__info-wrapper {
+        margin-top: 20px;
+      }
+      &__weather-data {
+        display: flex;
+        align-items: center;
+        padding-top: 7%;
+        padding-left: 4%;
+        margin-top: 20px;
+      }
+      &__city-name {
+        font-size: 1.5rem;
+        text-align: center;
+        padding-top: 10px;
         font-weight: bold;
-        color: #757575;
       }
-    }
-    &__current-temp {
-      font-size: 1.5rem;
-      font-weight: bold;
-      flex: 0 0 25%;
-    }
-    &__delete-item{
-      width: 10px;
-      height: 10px;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-
-  }
-  &__details {
-    background-color: #3f51b5;
-    margin: 10px 20px 0 0;
-    border-radius: 5px;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12),
-    0 2px 4px -1px rgba(0, 0, 0, 0.3);
-    padding: 5px;
-
-    &-item {
-      display: flex;
-      padding: 10px;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-      color: #424242;
-      &__text-block {
-        margin-left: 10%;
-        .text-block__name{
-          color: #ffffff;
-          font-size: 0.9rem;
-          margin-bottom: 5px;
-        }
-        .text-block__value{
-          font-size: 1.2rem;
-          color: #ffffff;
-
+      &__weather-condition {
+        flex: 1 0 60%;
+        &__description {
+          font-size: 1rem;
           font-weight: bold;
+          color: #757575;
         }
       }
+      &__current-temp {
+        font-size: 1.5rem;
+        font-weight: bold;
+        flex: 0 0 25%;
+      }
+      &__delete-item {
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
     }
-    .weather-icon {
-      width: 35px;
-      height: 35px;
-    }
-    :nth-last-child(1) {
-      border: none;
+    &__details {
+      background-color: #3f51b5;
+      margin: 10px 20px 0 0;
+      border-radius: 5px;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+      0 1px 10px 0 rgba(0, 0, 0, 0.12),
+      0 2px 4px -1px rgba(0, 0, 0, 0.3);
+      padding: 5px;
+
+      &-item {
+        display: flex;
+        padding: 10px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+        color: #424242;
+        &__text-block {
+          margin-left: 10%;
+          .text-block__name {
+            color: #ffffff;
+            font-size: 0.9rem;
+            margin-bottom: 5px;
+          }
+          .text-block__value {
+            font-size: 1.2rem;
+            color: #ffffff;
+
+            font-weight: bold;
+          }
+        }
+      }
+      .weather-icon {
+        width: 35px;
+        height: 35px;
+      }
+      :nth-last-child(1) {
+        border: none;
+      }
     }
   }
 }
