--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,7 +18,7 @@ $indigo: #3f51b5;
   border: none;
   border-radius: 10px;
   height: 36px;
-  line-height: 36px;
+  //line-height: 36px;
   padding: 0 16px;
   text-transform: uppercase;
   &:hover {
