--- a/src/components/searchForm/searchForm.scss
+++ b/src/components/searchForm/searchForm.scss
@@ -7,22 +7,16 @@
 
 .search-form__form {
   width: 100%;
-  &__input-wrapper {
+  &__input-field {
     margin-top: 20px;
     background-color: #ffffff;
     border-radius: 10px;
     border: 1px solid #ebebeb;
     padding: 10px;
     box-shadow: 0px 10px 30px -10px rgba(0, 0, 0, .3);
-    &:focus {
-      outline: none;
-    }
-  }
-  &__input-field {
     font-size: 20px;
-    border: none;
     width: 100%;
-    height: 30px;
+    height: 45px;
     vertical-align: middle;
     text-align: center;
     &:focus {
@@ -32,19 +26,22 @@
       }
     }
   }
-  &__control-panel{
+  &__control-panel {
     display: flex;
     justify-content: center;
     &__submit-btn {
       @extend %btns;
       margin-top: 35px;
       width: 30%;
-
     }
   }
-
 }
-
+.search-form__form__input-field.incorrect{
+  border: 1px solid red;
+  &::placeholder{
+    color: red;
+  }
+}
 
 
 
